--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,3 +54,10 @@ expo.webp.animated=false
 
 # Enable network inspector
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+
+android.compileSdkVersion=33
+android.targetSdkVersion=33
+android.buildToolsVersion=33.0.0
